RESOLVED FIXED254654
[WGSL] WTF::Vector no longer needs the explicit namespace
https://bugs.webkit.org/show_bug.cgi?id=254654
Summary [WGSL] WTF::Vector no longer needs the explicit namespace
Tadeu Zagallo
Reported 2023-03-29 02:22:37 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-29 02:23:00 PDT
Tadeu Zagallo
Comment 2 2023-03-29 02:32:23 PDT
EWS
Comment 3 2023-03-30 02:32:53 PDT
Committed 262316@main (024cc6b236d2): <https://commits.webkit.org/262316@main> Reviewed commits have been landed. Closing PR #12102 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.