[WGSL] WTF::Vector no longer needs the explicit namespace https://bugs.webkit.org/show_bug.cgi?id=254654 rdar://107359112

Reviewed by Myles C. Maxfield.

At one point, we had another Vector type used for type checking in the WGSL
namespace, which conflicted with WTF::Vector. Since then, we moved it into
WGSL::Types::Vector, and it's no longer necessary to use the qualified WTF::Vector

* Source/WebGPU/WGSL/Overload.h:
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::chooseOverload):
* Source/WebGPU/WGSL/WGSL.h:

Canonical link: https://commits.webkit.org/262316@main